--- a/lesson-02-openshift/Dockerfile
+++ b/lesson-02-openshift/Dockerfile
@@ -1,13 +1,12 @@
 
 #	make a docker file that runs python application
 
-FROM  python:3.8-alpine
+FROM  registry.access.redhat.com/ubi8/python-36
 
 # ensure local python is preferred over distribution python
 ENV PATH /usr/local/bin:$PATH
 
-
-RUN /usr/local/bin/python -m pip install --upgrade pip
+#RUN /usr/local/bin/python -m pip install --upgrade pip
 RUN pip install flask
 
 RUN mkdir /src
