changes to exercise 1

--- a/lesson-02-openshift/Dockerfile
+++ b/lesson-02-openshift/Dockerfile
@@ -6,12 +6,9 @@ FROM  registry.access.redhat.com/ubi8/python-36
 # ensure local python is preferred over distribution python
 ENV PATH /usr/local/bin:$PATH
 
-#RUN /usr/local/bin/python -m pip install --upgrade pip
+RUN pip install --upgrade pip
 RUN pip install flask
 
-RUN mkdir /src
-COPY app.py src
-
-WORKDIR /src
+COPY app.py .
 
 CMD [ "python3", "app.py" ]
